# libnfs

./: .gitignore  CMakeLists.txt
include/win32/: win32_compat.h
